--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 azure==0.8.4
-requests==2.18.*
-flask
-flask_restplus
-python-chess==0.19
+Flask==0.12.2
+flask-restplus==0.10.1
+python-chess==0.19.0
