--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "CheslieEndgame/databases/syzygyTB"]
 	path = CheslieEndgame/databases/syzygyTB
-	url = git@github.com:hgranlund/syzygyTB.git
+	url = https://github.com/hgranlund/syzygyTB.git
